# agentic_mp_dualrag

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: agent.py  main.py
data/: target_urls.json
data_pipeline/: build_rdf_graph.py  build_vector_db.py  reindex.py  scrape_html_to_json.py
doc/: TECHNICAL.md  requirements.md
doc/adr/: 0001-use-html-scraping-for-mpr-ingestion.md  0002-provenance-through-live-source-urls.md  0003-agent-orchestration-via-anthropic-api-and-subprocess-skills.md  0004-defer-rdf-graph-skill.md  0005-streaming-ui-with-sse-and-streamlit.md  README.md  template.md
frontend/: app.py  graph_tools_viz.py  graph_tools_viz_standalone.py  oxigraph_series_chart.py  technical_doc_view.py
skills/list_mpr_data_series/: SKILL.md  list_data_series.py
skills/query_macro_graph/: DEFERRED.md  SKILL.md  ontology_ref.md  run_sparql.py
skills/search_mpr_vector/: SKILL.md  query_chroma.py
