[project]
name = "agentic-mp-dualrag"
version = "0.1.0"
description = "Fed MPR chat: FastAPI + Anthropic + Chroma/Oxigraph skills, Streamlit UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "chromadb",
    "fastapi",
    "httpx",
    "pyoxigraph",
    "python-dotenv",
    "pyvis>=0.3.2",
    "streamlit",
    "uvicorn[standard]",
]

[tool.uv]
package = false
